--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.3",
     "@ant-design/icons": "^5.5.1",
     "@ant-design/pro-layout": "^7.21.2",
     "@emotion/react": "^11.13.3",
